# SoftwareEmbrace

./: NN_mat_fact_sparse.m  getEnvConditionsEMBRACE.m  prepareEnvEMBRACE.m  synergyEMBRACE.m  synergyFixedEMBRACE.m
duet_codes/meta/eeg/: times.txt
duet_codes/script/: README
duet_codes/script/s0_layout/: CY-261.elc  s1_parseLayout.m  s2_correctMetadata.m  s3_expand2hyper.m
duet_codes/script/s1_preprocessing/: my_prepare_layout.m  myft_appendtrials.m  s0_createMetaFile.m  s1_artifactExtraction.m  s2_artifactReview.m  s3_extractIC.m  s4_selectArtifactICs.m  s4a_reviewBlinkArtifacts.m  s5b_extractSketch_resting.m  s6a_markEKGlead.m  s7_saveSegments.m  s7a_mergeSegments.m  s7b_checkData.m  s8_fixSegments.m  s8a_fixSegments.m
duet_codes/script/s3_power/: myft_freqanalysis.m  s1_getPowerSensors.m  s1a_checkPowerSensors.m  s2_getPowerSensors.m  s2a_checkPowerSensors.m
duet_codes/script/s4_connectivity/: ant64dry_hyper.mat  s1_getConnectivityPLV_sensors.m  s2_stats.m  s3_plotStats.m  s3a_plotFDR.m  s4_stats.m  s5_plotStats.m  s6_stats.m  s7_plotStats.m
dyads_ciplv_code/script/s0_import/: s0_importData.m  s0_importWindowed.m
dyads_ciplv_code/script/s4_connectivity/: s1_getConnectivityPLVsensors.m  s1_getConnectivityPLVsensors_Hyper.m  s1_getConnectivityPLVsensors_Hyper_win.m
eeprobe_Python/: LICENSE.rst  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
eeprobe_Python/src/embrace_eep/: __init__.py  _version.py  eep.py
eeprobe_Python/src/embrace_eep/src/: raweep_module.c
eeprobe_Python/src/embrace_eep/tools/: mnetools.py  riff.py
synergy_codes/: NN_mat_fact_sparse.m  getEnvConditionsEMBRACE.m  synergyEMBRACE.m  synergyFixedEMBRACE.m
tuil_import_codes/s0_import/: s0_createSens.m
(+67 files in other folders)
