[project]
name = "embrace_eep"
version = "1.0"
description = "EMBRACE code for reading eeprobe CNT files."
readme = "README.md"
license = { file = "LICENSE.rst" }
authors = [{name = "Ricardo Bruña", email = "ricardo.bruna@ucm.es"}]
maintainers = [{name = "Ricardo Bruña", email = "ricardo.bruna@ucm.es"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: AI-Mind developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
    "scipy",
    "pandas",
    "mne==1.9.0"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[packaging]
package_name = "embrace_eep"
package_pprint_name = "EMBRACE code for reading eeprobe CNT files."
