[metadata]
name = embrace_eep
version = 0.4.4
author = Ricardo Bruña - Universidad Complutense de Madrid - UCM
author_email = ricardo.bruna@ucm.es
description = EMBRACE code for reading eeprobe CNT files.
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: AI-Mind developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.12
install_requires =
    numpy>=1.23
    scipy
    pandas
    mne>=1.9.0
